# AURORA

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  Makefile  README.md  ROADMAP.md  pyproject.toml  课程审核.command
.claude/: settings.json
.claude/hooks/: setup.sh
.github/workflows/: aurora-quest-pages.yml  ci.yml
aurora-quest/: index.html  styles.css  video-library.html
aurora-quest/src/: app.js  state.js  ui.js  video-library-state.js  video-library.generated.js
docs/: LEARNING_PLAN.md  README.md  audit_report_L01-L99.md  playtest-report.md  prep-checklist.md  week-01-checklist.md  week-02-checklist.md
docs/adr/: 0001-no-api-wrappers.md  0002-notebook-audit-and-fixes-2026-06.md
docs/archive/: README.md
docs/current/: OPENNESS.md
docs/notes/: README.md  example-向量.md
notebooks/: README.md  _matplotlib_bootstrap.py
notebooks/0_foundation/: L01_environment.ipynb  L01_motivation.ipynb  L02_python_numpy.ipynb  L02_sound_digital.ipynb  L03_course_map.ipynb  L03_spectrogram.ipynb
notebooks/10_integration/: L83_pipeline.ipynb  L84_mlops.ipynb  L85_demo.ipynb  L92_pipeline.ipynb  L93_mlops.ipynb  (+6 more)
scripts/: add_nav_cells.py  apply_dsp_remaining_supplement.py  apply_l01_l10_polish.py  apply_l11_l20_polish.py  apply_l31_l40_polish.py  apply_ml_asr_remaining_supplement.py  audit_drift.py  build_docs.py  build_knowledge_graph.py  build_quest_bundle.mjs  demo_audio.py  generate_aurora_quest_data.mjs  generate_video_library_data.mjs  log_ci_metrics.py  sim_students_audit.py  sim_students_tui.py  validate_pipeline.py
(+1148 files in other folders)
